# flowboard_api

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  Step_Guide.md  TODO.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/api/: __init__.py
app/api/v1/: __init__.py  routes.py
app/core/: __init__.py  config.py
app/db/: __init__.py  base.py  session.py
app/models/: __init__.py  user.py
app/schemas/: __init__.py  user.py
app/services/: __init__.py  auth.py
app/tests/: __init__.py  test_health.py
scripts/: bootstrap_git.ps1
